--- a/frontend/messenger/package.json
+++ b/frontend/messenger/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.3.5",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "local-storage": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
